--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,8 +13,8 @@
         />
     <item
         android:id="@+id/nav_subtotal"
-        android:title="Subtotal"
-        android:icon="@drawable/ic_receipt"
+        android:title="Completed"
+        android:icon="@drawable/ic_dish"
         />
     <item
         android:id="@+id/nav_more"
