--- a/app/src/main/res/layout/fragment_setting_admin.xml
+++ b/app/src/main/res/layout/fragment_setting_admin.xml
@@ -370,10 +370,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/default_reservation_time_minutes"
-                        android:fontFamily="@font/noto_sans_light"
+                        android:fontFamily="@font/noto_sans"
                         android:textSize="13sp"
                         android:layout_marginTop="10dp"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/switch_enable_dark_mode"
                         />
@@ -511,10 +511,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/notification_email"
-                        android:fontFamily="@font/noto_sans_light"
+                        android:fontFamily="@font/noto_sans"
                         android:textSize="13sp"
                         android:layout_marginTop="10dp"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/switch_sms_notifications"
                         />
