--- a/app/src/main/res/menu/navigation_drawer_menu_admin.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu_admin.xml
@@ -30,6 +30,10 @@
             android:title="Staff Management"
             android:icon="@drawable/ic_staff_manager"
             />
+        <item android:id="@+id/nav_admin_notifications"
+            android:title="Notifications"
+            android:icon="@drawable/ic_notifications"
+            />
         <item android:id="@+id/nav_setting"
             android:title="Setting"
             android:icon="@drawable/ic_settings"
