--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -87,5 +87,11 @@
     <color name="login_button">#5E5CE6</color>
     <color name="input_background_dark">#283B62</color>
     <color name="map_menu_background">#333333</color>
+    <color name="indicator_unread">#2196F3</color>
+    <color name="notification_title">#333333</color>
+    <color name="notification_message">#666666</color>
+    <color name="notification_timestamp">#888888</color>
+    <color name="read_notification_bg">#FFFFFF</color>
+    <color name="unread_notification_bg">#F5F9FF</color>
 
 </resources>
